# PaddleCast

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONDITION_FILTERS.md  Dockerfile  README.md  SPEC.md  changelog.md  config.yaml  data_loader.py  main.py  pyproject.toml  requirements.txt  rubric.md  statistical_analysis.ipynb  tasks.md  wrangler.toml
.claude/: launch.json
.github/workflows/: deploy-frontend.yml  update-data.yml
.ipynb_checkpoints/: statistical_analysis-checkpoint.ipynb
ai/: project_requirements.md
analysis/observations/: PaddleCast Observations.xlsx  REPORT.md  analyze.py
data/: data.json
docs/: CNAME  app.js  charts.js  index.html  style.css
docs/data/: data.json
functions/api/: forecast.js  wind.js
notes/: scoring_update_instructions.md
public/: _headers  config.json  edit.html  index.html  style.css
public/js/: app.js  config.js  edit.js  locations.js  storage.js
public/js/core/: beaufort.js  colors.js  evaluate.js  forecast.js  glow.js  prefs.js  sun.js  wmo.js
public/js/providers/: noaatides.js  openmeteo.js  tempest.js
public/js/ui/: prefsform.js  settings.js  views.js  wheel.js
scripts/: fetch_and_score.py
src/: app.js  charts.js  config.py  index-original.html  index.html  llm_handler.py  main.py  notifications.py  requirements.txt  style.css  sunrise_sunset.py  tides.py  weather.py
tests/: conftest.py  test_coops.py  test_live_weather_api.py  test_tides.py  test_weather.py
tools/: edit-server.mjs
