[project]
name = "statistical-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
